--- a/project_view.html
+++ b/project_view.html
@@ -172,15 +172,12 @@ function openBiblioWindow() {
             let line = `<b>${r.author || ''} (${r.finalID})</b><br>${r.title}`;
             line += respStr ? ` / ${respStr} . ـــ ` : ` . ـــ `;
     let bibTail = "";
-    if (r.journal) {
-        // تنسيق المجلة: يضيف الفاصلة فقط إذا كانت الخانة ممتلئة لمنع التكرار
-        let parts = [
-            r.journal,
-            r.issue,
-            r.year,
-            r.pages ? "ص " + r.pages : ""
-        ].filter(x => x).join(" . ـــ ");
-        bibTail = parts;
+        if (r.journal) {
+            // تنسيق المجلة: دمج العدد والسنة بفاصلة ثم الباقي بشرطة نقطية
+            let issueYear = [r.issue, r.year].filter(x => x).join(" ، ");
+            bibTail = [r.journal, issueYear, r.pages ? "ص " + r.pages : ""]
+                       .filter(x => x).join(" . ـــ ");
+        }
     } else {
         // تنسيق الكتاب: يضع (:) بين المكان والناشر و (،) قبل السنة
         let pubInfo = [r.place, r.publisher].filter(x => x).join(" : ");
